--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,15 @@
 
 </head>
 
-<body class="bg-black">
-  <div class="flex items-center justify-between ml-4 mt-7">
+<body class="bg-black ">
+  <div class="flex items-center justify-between ml-4 mt- fixed w-full top-0 left-0 right-0 z-50 py-4 px-4">
 
     <h1 class="flex items-center">
       <span class="font-bold text-2xl text-white hover:text-sky-950 cursor-pointer font-roboto">SERIGNE</span>
-      <span class="font-bold text-2xl text-[#D3E97A] hover:text-sky-400 cursor-pointer ml-2.5">KA</span>
+      <span class="font-bold text-2xl text-amber-200 hover:text-sky-400 cursor-pointer ml-2.5">KA</span>
     </h1>
 
-    <button id="menu-btn" class="block sm:hidden text-[#D3E97A] focus:outline-none">
+    <button id="menu-btn" class="block sm:hidden text-amber-200 focus:outline-none">
       <svg class="w-8 h-8 cursor-pointer hover:text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"
         xmlns="http://www.w3.org/2000/svg">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -47,7 +47,7 @@
 
 
     <div class="md:w-1/2">
-      <h1 class="font-bold text-white text-4xl font-bebas">HI, I AM</h1>
+      <h1 class="font-bold text-white text-4xl font-roboto">HI, I AM</h1>
       <h1 class="font-bold text-white text-4xl font-roboto">SERIGNE KA</h1>
 
       <p class="text-white mt-4 font-roboto">
@@ -119,7 +119,7 @@
               <span class="text-2xl ml-3">&#8599</span>
             </div>
 
-            <div class="absolute left-0 right-1 bottom-0 border-1 border-amber-200 top-8 "></div>
+            <div class="absolute left-0 right-1 bottom-0  border border-amber-200 top-8 "></div>
 
           </div>
 
@@ -130,7 +130,7 @@
               <i class="fa-brands fa-github text-amber-200 text-2xl ml-2.5"></i>
             </div>
 
-            <div class="absolute left-0 right-1 bottom-0 border-1 border-amber-200 top-8 "></div>
+            <div class="absolute left-0 right-1 bottom-0  border border-amber-200 top-8 "></div>
 
           </div>
 
@@ -182,7 +182,7 @@ DEMO
                <span class="text-2xl ml-3">&#8599</span>
             </div>
 
-            <div class="absolute left-0 right-1 bottom-0 border-1 border-amber-200 top-8 "></div>
+            <div class="absolute left-0 right-1 bottom-0  border border-amber-200 top-8 "></div>
 
           </div>
       </div>
@@ -225,7 +225,7 @@ DEMO
               <span class="text-2xl ml-3">&#8599</span>
             </div>
 
-            <div class="absolute left-0 right-1 bottom-0 border-1 border-amber-200 top-8 "></div>
+            <div class="absolute left-0 right-1 bottom-0 border border-amber-200 top-8 "></div>
 
           </div>
 
@@ -236,14 +236,14 @@ DEMO
               <i class="fa-brands fa-github text-amber-200 text-2xl ml-2.5"></i>
             </div>
 
-            <div class="absolute left-0 right-1 bottom-0 border-1 border-amber-200 top-8 "></div>
+            <div class="absolute left-0 right-1 bottom-0 border border-amber-200 top-8 "></div>
 
           </div>
 
         </div>
   </section>
 
-  <footer id="Contact" class="text-white px-4 lg:px-12 flex flex-col gap-7 mt-44 min-h-screen">
+  <footer id="Contact" class="text-white px-4 py-4 lg:px-4 flex flex-col gap-7 mt-44 min-h-screen">
     <hr class="bg-amber-200 h-px">
 
     <div class="flex flex-col mt-32 lg:flex-row justify-between order order-1 lg:order-1 gap-8">
@@ -256,7 +256,7 @@ DEMO
 
         <div class="flex gap-4 mt-4 items-center">
           <a href="#" class="text-[#D3E97A] text-2xl"><i class="fa-brands fa-github"></i></a>
-          <a href="#" class="text-[#D3E97A] text-2xl"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="https://www.linkedin.com/in/serigne-ka-654b77369?utm_source=share_via&utm_content=profile&utm_medium=member_ios" class="text-[#D3E97A] text-2xl"><i class="fa-brands fa-linkedin-in"></i></a>
           <a href="#" class="text-[#D3E97A] text-2xl"><i class="fa-brands fa-x-twitter"></i></a>
           <a href="#" class="text-[#D3E97A] text-2xl"><i class="fa-brands fa-instagram"></i></a>
         </div>
