--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
     </button>
 
     <nav id="menu" class="hidden sm:flex gap-7 text-white mr-2">
-      <a href="about.html" class="hover:text-sky-500">Projets</a>
-      <a href="about.html" class="hover:text-sky-500">À propos</a>
-      <a href="#Contact" class="hover:text-sky-500">Contact</a>
+      <a href="#Projets" class="hover:text-amber-200 font-bold">Projets</a>
+      <a href="about.html" class="hover:text-amber-200 font-bold">À propos</a>
+      <a href="#Contact" class="hover:text-amber-200 font-bold">Contact</a>
     </nav>
   </div>
 
@@ -55,26 +55,33 @@
         de sites web accessibles et conviviaux
       </p>
 
-      <div class="flex justify-center md:justify-start items-center gap-5 mt-7">
-        <button class="text-black bg-[#D3E97A] px-4 py-2 rounded-2xl font-bold hover:bg-green-400 transition-colors">
+      <div class="flex justify-center md:justify-start items-center gap-4 mt-7">
+        <button class="text-black bg-[#D3E97A] px-4 py-2 rounded-3xl font-bold hover:bg-green-400 transition-colors">
           Contactez moi
           <i class="fa-solid fa-circle"></i></button>
 
-        <i class="fa-brands fa-linkedin-in text-3xl text-[#D3E97A]"></i>
-        <i class="fa-brands fa-github text-3xl text-[#D3E97A]"></i>
+        <div class="w-12 h-12 bg-[#222222] rounded-full flex items-center justify-center">
+          <i class="fa-brands fa-linkedin-in text-3xl text-[#D3E97A]"></i>
+        </div>
+
+        <div class="w-12 h-12 bg-[#222222] rounded-full flex items-center justify-center">
+          <i class="fa-brands fa-github text-3xl text-[#D3E97A]"></i>
+        </div>
+
       </div>
     </div>
 
 
     <div class="md:w-1/2 flex justify-center">
-      <img src="ka.jpeg" alt="Serigne Ka" class="w-60 md:w-80 rounded-md transition-duration-500 hover:in-hover:blur-sm hover:scale-105">
+      <img src="ka.jpeg" alt="Serigne Ka"
+        class="w-60 md:w-80 rounded-md transition-transform duration-300 hover:rotate-16">
     </div>
 
   </section>
 
   <hr class="border-none h-px bg-amber-50 mt-7">
 
-  <section class="flex flex-col lg:flex-row justify-center items-center gap-6 mt-36 px-4 lg:px-12">
+  <section id="Projets" class="flex flex-col lg:flex-row justify-center items-center gap-6 mt-36 px-4 lg:px-12">
 
     <div class="lg:w-1/2">
       <h2 class="text-white mt-20 font-bold text-3xl font-roboto">PROJET MIS EN AVANT</h2>
@@ -110,7 +117,7 @@
           <span class="text-white">Développeur front-end</span>
         </div>
         <hr class="border-none h-px bg-white mb-5">
-         
+
         <div class="flex gap-14 mt-1">
           <div class="relative w-20 gap-4 mt-5">
 
@@ -174,17 +181,17 @@
           <span class="text-white">Développeur front-end</span>
         </div>
         <hr class="border-none h-px bg-white mb-5">
-DEMO
+        DEMO
         <div class="relative w-20 gap-4 mt-5">
 
-            <div class="flex items-center text-amber-200">
-              <span class="text-amber-200">DEMO</span>
-               <span class="text-2xl ml-3">&#8599</span>
-            </div>
-
-            <div class="absolute left-0 right-1 bottom-0  border border-amber-200 top-8 "></div>
-
+          <div class="flex items-center text-amber-200">
+            <span class="text-amber-200">DEMO</span>
+            <span class="text-2xl ml-3">&#8599</span>
           </div>
+
+          <div class="absolute left-0 right-1 bottom-0  border border-amber-200 top-8 "></div>
+
+        </div>
       </div>
     </div>
   </section>
@@ -216,31 +223,31 @@ DEMO
       </div>
       <hr class="border-none h-px bg-white mb-5">
 
-DEMO
+      DEMO
       <div class="flex gap-14 mt-1">
-          <div class="relative w-20 gap-4 mt-5">
+        <div class="relative w-20 gap-4 mt-5">
 
-            <div class="flex items-center text-amber-200 ">
-              <span class="text-amber-200">DEMO</span>
-              <span class="text-2xl ml-3">&#8599</span>
-            </div>
-
-            <div class="absolute left-0 right-1 bottom-0 border border-amber-200 top-8 "></div>
-
+          <div class="flex items-center text-amber-200 ">
+            <span class="text-amber-200">DEMO</span>
+            <span class="text-2xl ml-3">&#8599</span>
           </div>
 
-          <div class="relative w-22 gap-4 mt-5">
-
-            <div class="flex items-center ">
-              <span class="text-amber-200">GitHub</span>
-              <i class="fa-brands fa-github text-amber-200 text-2xl ml-2.5"></i>
-            </div>
-
-            <div class="absolute left-0 right-1 bottom-0 border border-amber-200 top-8 "></div>
-
-          </div>
+          <div class="absolute left-0 right-1 bottom-0 border border-amber-200 top-8 "></div>
 
         </div>
+
+        <div class="relative w-22 gap-4 mt-5">
+
+          <div class="flex items-center ">
+            <span class="text-amber-200">GitHub</span>
+            <i class="fa-brands fa-github text-amber-200 text-2xl ml-2.5"></i>
+          </div>
+
+          <div class="absolute left-0 right-1 bottom-0 border border-amber-200 top-8 "></div>
+
+        </div>
+
+      </div>
   </section>
 
   <footer id="Contact" class="text-white px-4 py-4 lg:px-4 flex flex-col gap-7 mt-44 min-h-screen">
@@ -256,13 +263,14 @@ DEMO
 
         <div class="flex gap-4 mt-4 items-center">
           <a href="#" class="text-[#D3E97A] text-2xl"><i class="fa-brands fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/serigne-ka-654b77369?utm_source=share_via&utm_content=profile&utm_medium=member_ios" class="text-[#D3E97A] text-2xl"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="https://www.linkedin.com/in/serigne-ka-654b77369?utm_source=share_via&utm_content=profile&utm_medium=member_ios"
+            class="text-[#D3E97A] text-2xl"><i class="fa-brands fa-linkedin-in"></i></a>
           <a href="#" class="text-[#D3E97A] text-2xl"><i class="fa-brands fa-x-twitter"></i></a>
           <a href="#" class="text-[#D3E97A] text-2xl"><i class="fa-brands fa-instagram"></i></a>
         </div>
         <P class="hidden lg:block mt-56 order-3 lg:order-2">&copy; 2024 Serigne Ka. Tous droits réservés</P>
       </div>
-     
+
 
       <div class="flex flex-col mb-10 gap-3 w-full lg:w-1/2 order-2 lg:order-3">
         <label for="name" class="text-white">NOM COMPLET</label>
